--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]
-  command = "npm run build"
-  publish = "_site"
-  functions = "functions"
+  base = "EleventyProject/"
+  # command = "npm run build"
+  publish = "_site/"
+  functions = "functions/"
