--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "EleventyProject/"
+  base = "ResearchScientist/EleventyProject/"
   # command = "npm run build"
   publish = "_site/"
   functions = "functions/"
